--- a/_posts/2018-02-26-freeipa.md
+++ b/_posts/2018-02-26-freeipa.md
@@ -12,7 +12,7 @@ author-social:
   github: https://github.com/mbillow
 ---
 
-Before we begin, a bit about what FreeIPA actually is: FreeIPA, or Red Had Identity Management, is a management interface and API built on top of several well-known, open source projects: 389 Directory Server, MIT Kerberos, DogTag for managing certificates and SSSD for client enrollment. The goal of the FreeIPA project is to create a cohesive, central, extensible, and easy to maintain user management and authentication system. FreeIPA provides an easy to use UI/UX for managing everything from user accounts, permissions, host based access controls to global sudo rules and certificate control. If you would like to play around with the interface, there is a public [demo instance](https://www.freeipa.org/page/Demo) available.
+Before we begin, a bit about what FreeIPA actually is: FreeIPA, or Red Hat Identity Management, is a management interface and API built on top of several well-known, open source projects: 389 Directory Server, MIT Kerberos, DogTag for managing certificates and SSSD for client enrollment. The goal of the FreeIPA project is to create a cohesive, central, extensible, and easy to maintain user management and authentication system. FreeIPA provides an easy to use UI/UX for managing everything from user accounts, permissions, host based access controls to global sudo rules and certificate control. If you would like to play around with the interface, there is a public [demo instance](https://www.freeipa.org/page/Demo) available.
 
 ## Our Situation
 For years Computer Science House has relied on LDAP and Kerberos for user management and single sign-on. The culture and communication within our organization and the services we provide revolve around these accounts, so it is essential that the infrastructure around them is solid. We will go more in-depth on this in the next section, but we also store information about a person's membership in custom LDAP attributes, making LDAP a source-of-truth for many of the projects our members work on. This also presents the hurdle of properly handling ACLs to user data for service accounts used by these projects. 
@@ -155,7 +155,7 @@ These Python and Javascript plugins need to be replicated to each IPA server in 
 
 ## FreeRADIUS and Wireless
 
-Computer Science House administers its own wireless network which uses WPA2 Enterprise authentication through RADIUS authentication over TLS. In the past we have used a custom script which used MD4 hashes stored  in Kerberos and handled the MSCHAPv2 challenge response protocol manually. Though this solution worked, it was not well documented and difficult to troubleshoot. FreeIPA though has the ability to support cross-domain trusts with Active Directory out-of-the-box. We used this feature to have IPA generate the necessary hashes, store them in LDAP, and then gave FreeRADIUS's service account the ability to view this field. 
+Computer Science House administers its own wireless network which uses WPA2 Enterprise authentication through RADIUS authentication over TLS. In the past we have used a custom script which used MD4 hashes stored in Kerberos and handled the MSCHAPv2 challenge response protocol manually. Though this solution worked, it was not well documented and difficult to troubleshoot. FreeIPA though has the ability to support cross-domain trusts with Active Directory out-of-the-box. We used this feature to have IPA generate the necessary hashes, store them in LDAP, and then gave FreeRADIUS's service account the ability to view this field. 
 
 
 
@@ -165,4 +165,4 @@ This greatly simplifies our FreeRADIUS configuration since we can just use the d
 
 ## Deployment
 
-Since we use Puppet as our configuration management platform, we decided that to efficiently enroll our existing hosts, we would push out a manifest that installed the `freeipa-client` package and ran `ipa-client-install` for us with the proper parameters. The easiest way to do this, that I could think of, was to create a `puppet` account in FreeIPA and give the necessary permissions to enroll hosts and create host objects. (Both operations are necessary to enroll a new host from scratch.) Our Puppet environments are controlled by a Git repo using r10k with Heira and secrets are encrypted using Heira-Eyaml. So after configuring the user, encrypting the password in the Heira config, and configuring the [ipaclient](https://forge.puppet.com/joshuabaird/ipaclient) puppet module; we are able to automatically enroll hosts in our domain. This allows for the rapid bootstrapping of a new server with a single Puppet run.
+Since we use Puppet as our configuration management platform, we decided that to efficiently enroll our existing hosts, we would push out a manifest that installed the `freeipa-client` package and ran `ipa-client-install` for us with the proper parameters. The easiest way to do this, that I could think of, was to create a `puppet` account in FreeIPA and give the necessary permissions to enroll hosts and create host objects. (Both operations are necessary to enroll a new host from scratch.) Our Puppet environments are controlled by a Git repo using r10k with Heira and secrets are encrypted using Heira-Eyaml. We are able to automatically enroll hosts in our domain after: configuring the user, encrypting the password in the Heira config, and configuring the [ipaclient](https://forge.puppet.com/joshuabaird/ipaclient) puppet module. This allows for the rapid bootstrapping of a new server with a single Puppet run.
