--- a/_posts/2018-04-02-taldoor.md
+++ b/_posts/2018-04-02-taldoor.md
@@ -17,7 +17,7 @@ author-social:
 ---
 TalDoor is a hardware redesign of CSH's famous (now severely outdated and unsupported) iButton authentication system. TalDoor is named after our illustrious RA Tal, who was famous for having his door closed at all hours. TalDoor is a complete redesign of the original Gatekeeper system, with the main constraint of maintaining the same-footprint. 
 
-There are two main complaints about the old GateKeeper system: iButtons are insecure, finding custom power supplies for the hardware is difficult and costly. So when making TalDoor I chose to use the [PocketBeagle]( http://beagleboard.org/pocket) devboard. In addition to often returning pictures of cute dogs when googling the name, the PocketBeagle runs linux and is powerful enough to support encryption of the ID card data.
+The two main complaints about the old GateKeeper system are that iButtons are insecure and finding custom power supplies for the hardware is difficult and costly. So when making TalDoor I chose to use the [PocketBeagle]( http://beagleboard.org/pocket) devboard. In addition to often returning pictures of cute dogs when googling the name, the PocketBeagle runs linux and is powerful enough to support encryption of the ID card data.
 
 To further the security of the system TalDoor uses the PN532 NFC reader which supports ISO14443A for use with encrypted Mifare DESFire NFC cards. You can read more about NFC and the PN532 [here]( https://learn.adafruit.com/adafruit-pn532-rfid-nfc/about-nfc). ID cards are fairly cheap and can be printed with names, photos, and even the CSH logo.
 
