grammar/spelling fixes

--- a/_posts/2018-04-02-taldoor.md
+++ b/_posts/2018-04-02-taldoor.md
@@ -15,15 +15,15 @@ author-social:
   github: https://github.com/akaStanley
   linkedin: https://www.linkedin.com/in/skulbacki/
 ---
-TalDoor is a hardware redesign of CSH's famous (now severely outdated and unsupported) iButton authentication system. TalDoor is named after our illustrious RA Tal, who was famous for having his door closed at all hours. TalDoor is a complete redesign of the original Gatekeeper system, with the main constraint of maintaining the same-footprint. 
+TalDoor is a hardware redesign of CSH's famous (now severely outdated and unsupported) iButton authentication system. TalDoor is named after our illustrious RA Tal, who was famous for having his door closed at all hours. TalDoor is a complete redesign of the original Gatekeeper system, with the main constraint of maintaining the same physical footprint. 
 
-The two main complaints about the old GateKeeper system are that iButtons are insecure and finding custom power supplies for the hardware is difficult and costly. So when making TalDoor I chose to use the [PocketBeagle]( http://beagleboard.org/pocket) devboard. In addition to often returning pictures of cute dogs when googling the name, the PocketBeagle runs linux and is powerful enough to support encryption of the ID card data.
+The two main complaints about the old GateKeeper system are that iButtons are insecure and finding custom power supplies for the hardware is difficult and costly. So when making TalDoor I chose to use the [PocketBeagle]( http://beagleboard.org/pocket) development board. In addition to often returning pictures of cute dogs when Googling the name, the PocketBeagle runs Linux and is powerful enough to support encryption of the ID card data.
 
-To further the security of the system TalDoor uses the PN532 NFC reader which supports ISO14443A for use with encrypted Mifare DESFire NFC cards. You can read more about NFC and the PN532 [here]( https://learn.adafruit.com/adafruit-pn532-rfid-nfc/about-nfc). ID cards are fairly cheap and can be printed with names, photos, and even the CSH logo.
+To further the security of the system, TalDoor uses the PN532 NFC reader which supports ISO14443A for use with encrypted Mifare DESFire NFC cards. You can read more about NFC and the PN532 [here]( https://learn.adafruit.com/adafruit-pn532-rfid-nfc/about-nfc). ID cards are fairly cheap and can be printed with names, photos, and even the CSH logo.
 
-Because the current GateKeeper system is run from custom 15v power supplies with inverted power/ground lines, finding replacement parts is difficult. Each GateKeeper system also had an ethernet connection for data. CSH was recently donated gigabit POE network switches that allow for up to 24 watts of power to be drawn from each ethernet port in the network. This means that TalDoor requires only a single ethernet cable for both power and data. At peak operation is uses a mere 3 watts of power which is well within the constraints.
+Because the current GateKeeper system is run from custom 15v power supplies with inverted power/ground lines, finding replacement parts is difficult. Each GateKeeper system also has an Ethernet connection for data. CSH was recently donated gigabit POE network switches that allow for up to 24 watts of power to be drawn from each ethernet port in the network. This means that TalDoor requires only a single ethernet cable for both power and data. At peak operation it uses a mere 3 watts of power which is well within the constraints.
 
-Additionally TalDoor has some extra goodies inside for enhanced operation. Here is a high level overview of the main components used in TalDoor:
+Additionally the main TalDoor PCB has some extra goodies inside. Here is a high level overview of the main components used in TalDoor:
 
 The main PCB which fits exactly where the old GateKeeper board lives in each door lock housing:
 
@@ -43,4 +43,4 @@ There is also an external reader module mounted in an [HID EHRP40-K enclosuse](h
 | Red & Green LEDs          |
 | Beeper for audio feedback |
 
-The schematic of TalDoor can be viewed [here](https://github.com/akaStanley/TalDoor/blob/master/Hardware/TalDoorSchematic.pdf) directly, otherwise you can see more photos, the complete bill of materials excel doc, datasheets, dimensions, KiCAD files, and other related files on [my github page]( https://github.com/akaStanley/TalDoor).
+The schematic of TalDoor can be viewed [here](https://github.com/akaStanley/TalDoor/blob/master/Hardware/TalDoorSchematic.pdf) directly, otherwise you can see more photos, the complete bill of materials Excel spreadsheet, datasheets, dimensions, KiCAD files, and other related files on [my GitHub page]( https://github.com/akaStanley/TalDoor).
