added tutorial link

--- a/_posts/2018-4-11-Sims3CC.md
+++ b/_posts/2018-4-11-Sims3CC.md
@@ -28,7 +28,7 @@ I used TSR workshop to export an outfit similar to what I wanted to create, then
 
 ## Want to mod Sims3 yourself?
 
-I made a comprehensive tutorial with pictures that you can follow along
+I made a comprehensive [tutorial](https://github.com/LaurenCBullock/Sims3Tut/blob/master/Sims3Tut.md)  with pictures that you can follow along
 
 ## Download my mods
 
