.pnga is not the future of image formats :(

--- a/_posts/2018-04-02-taldoor.md
+++ b/_posts/2018-04-02-taldoor.md
@@ -35,7 +35,7 @@ The main PCB which fits exactly where the old GateKeeper board lives in each doo
 | Door lock motor driver    |
 | 3.3v & 5v regulators	    |
 
-There is also an external reader module mounted in an [HID EHRP40-K enclosuse](https://www.hidglobal.com/sites/default/files/edge-evo-ehr40-ehrp40-hio-reader-controller.pnga). This is attached on the outside of the door, where the current iButton reader sits. 
+There is also an external reader module mounted in an [HID EHRP40-K enclosuse](https://www.hidglobal.com/sites/default/files/edge-evo-ehr40-ehrp40-hio-reader-controller.png). This is attached on the outside of the door, where the current iButton reader sits. 
 
 |   External Reader Board   |
 |---------------------------|
