--- a/_posts/2018-04-17-libra.md
+++ b/_posts/2018-04-17-libra.md
@@ -16,7 +16,7 @@ author-image: https://avatars3.githubusercontent.com/u/31594822?s=460&v=4
 author-bio: 3rd Year CIT Student
 author-email: fxa6511@rit.edu
 author-social:
-    github: https://hithub.com/nandoascal
+    github: https://github.com/nandoascal
     linkedin: 
 ---
 Libra was meant to allow CSH members to have a place to congregate their wealth of knowledge into one place. My hopes is that down the line Libra will enable
