Major Project, jefftaglic's changes implemented.

--- a/_posts/2018-04-17-libra.md
+++ b/_posts/2018-04-17-libra.md
@@ -8,7 +8,7 @@ categories:
     - MySQL
     - Flask_SQLAlchemy
     - Python
-description: web knowledgebase where users to input skills and view skills of other users
+description: A web knowledge base where users may input their skills and view the skills of others.
 image: 
 image-sm: 
 author: Fernando Abascal
@@ -19,15 +19,15 @@ author-social:
     github: https://github.com/nandoascal
     linkedin: 
 ---
-Libra was meant to allow CSH members to have a place to congregate their wealth of knowledge into one place. My hopes is that down the line Libra will enable
+Libra was meant to allow CSH members to have a place to congregate their wealth of knowledge into one place. My hope is that down the line Libra will enable
 members of house to easily track down other members that have particular skillsets and then take that step to learn those skills. Sometimes it could be
-something simple like python that many people on floor understand. Other times it could be some obscure framework that one guy managed to incorporate into
+something simple like Python that many people on floor understand. Other times it could be some obscure framework that one guy managed to incorporate into
 a peanut dispensing app. Regardless, it is useful having a place where you can track this stuff down.
 
 Libra in its current state allows users to create, edit, and delete their own skills, see a list of all users that have entered skills into the site, and
 search for specific skills.
 
-I loved learning frontend and although I had a lot of trouble, I was able to also learn how to properly communicate and post information to a MySQL database using python.
+I loved learning frontend and although I had a lot of trouble, I was able to also learn how to properly communicate and post information to a MySQL database using Python.
 
-I do hope to continue to improve the site and add more features until it is a fully fleshed out and much more viable product. Also, my frontend design is really poor presently
+I hope to continue to improve the site and add more features until it is a fully fleshed out and much more viable product. Also, my frontend design is really poor presently
 and could use a lot of work.
